--- a/index.html
+++ b/index.html
@@ -105,8 +105,15 @@
     <!-- ICE Expenses -->
     <div class="tab-pane fade" id="ice-exp">
       <div class="card card-body">
+        <div class="row">
+        <div class="col-6">
         <h6>ICE Expenses</h6>
         <div id="iceTotal" class="mb-2 fw-bold">Total: ₹0</div>
+        </div>
+        <div class="col-6" id="iceFuelExpenses">
+        </div>
+
+          </div>
         <div class="row g-2">
           <div class="col-6">
             <select id="iceCategory" class="form-select">
