--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     }
     .summary-box { background:#eef; border:1px solid #ccd; border-radius:8px; padding:10px; margin-bottom:12px; }
   </style>
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="icon-192.png">
+<link rel="manifest" href="manifest.json">
 </head>
 <body>
   <header class="p-2 d-flex justify-content-between align-items-center">
