--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <div class="col-6">
             <label class="form-label small">Current SoC %</label>
             <input type="number" id="soc" class="form-control">
+            <input type="number" id="sochidden" class="form-control" style="display:none;">
           </div>
           <div class="col-6">
             <label class="form-label small">Odometer</label>
