--- a/index.html
+++ b/index.html
@@ -7,32 +7,48 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <meta name="theme-color" content="#2c3e50"/>
   <style>
-    body { background:#f8f9fa; }
-    header { position:sticky; top:0; z-index:1000; background:#fff; border-bottom:1px solid #dee2e6; }
-    .nav-pills { flex-wrap:nowrap; overflow-x:auto; scrollbar-width:thin; }
-    .nav-pills::-webkit-scrollbar { height:4px; }
-    main { padding:10px; }
-    .card { margin-bottom:12px; }
-    .toast-banner {
-      background:#fff3cd; border:1px solid #ffeeba; padding:8px 12px;
-      border-radius:8px; font-size:13px; margin-bottom:10px;
+    body { background:#f5f5f5; font-size:14px; }
+    header { position:sticky; top:0; z-index:1000; background:#fff; border-bottom:1px solid #ddd; padding:6px 10px; }
+    header h6 { font-size:15px; margin:0; }
+
+    .nav-pills { flex-wrap:nowrap; overflow-x:auto; scrollbar-width:none; margin:0; }
+    .nav-pills .nav-link { border-radius:6px; padding:6px 10px; font-size:13px; }
+    .nav-pills::-webkit-scrollbar { display:none; }
+    main { padding:8px; }
+
+    .section-box { background:#fff; border-radius:8px; border:1px solid #eee; padding:10px; margin-bottom:8px; }
+    .toast-banner { background:#fff3cd; border:1px solid #ffeeba; padding:6px 8px; border-radius:6px; font-size:12px; margin-bottom:6px; }
+
+    .summary-box { background:#eef; border:1px solid #ccd; border-radius:6px; padding:8px; font-size:13px; margin-bottom:8px; }
+
+    .form-control, .form-select { font-size:13px; padding:6px 8px; }
+    .btn { font-size:13px; padding:6px; border-radius:6px; }
+
+    /* History & Expenses like list items */
+    .log-item, .exp-item, .master-item {
+      padding:8px 6px; border-bottom:1px solid #eee; font-size:13px;
+      display:flex; justify-content:space-between; align-items:center;
     }
-    .summary-box { background:#eef; border:1px solid #ccd; border-radius:8px; padding:10px; margin-bottom:12px; }
+    .log-item:last-child, .exp-item:last-child, .master-item:last-child { border-bottom:0; }
+    .log-meta { color:#888; font-size:12px; }
+    .amt { font-weight:bold; }
   </style>
   <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="icon-192.png">
-<link rel="manifest" href="manifest.json">
+  <link rel="apple-touch-icon" sizes="180x180" href="icon-192.png">
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <header class="p-2 d-flex justify-content-between align-items-center">
-    <h6 class="m-0">⚡ Harrier EV</h6>
+  <!-- Header -->
+  <header class="d-flex justify-content-between align-items-center">
+    <h6>⚡ Harrier EV</h6>
     <div>
       <button id="loginBtn" class="btn btn-sm btn-outline-primary">Login</button>
       <button id="logoutBtn" class="btn btn-sm btn-outline-secondary d-none">Logout</button>
     </div>
   </header>
 
-  <ul class="nav nav-pills flex-nowrap overflow-auto text-nowrap sticky-top bg-white p-2" id="tabs" role="tablist" style="gap:6px; top:45px;">
+  <!-- Tabs -->
+  <ul class="nav nav-pills flex-nowrap overflow-auto text-nowrap sticky-top bg-white p-2" id="tabs" role="tablist" style="gap:6px; top:42px;">
     <li class="nav-item"><button class="nav-link active" data-bs-toggle="pill" data-bs-target="#charge">🔋 Charging</button></li>
     <li class="nav-item"><button class="nav-link" data-bs-toggle="pill" data-bs-target="#ev-exp">🚙 EV</button></li>
     <li class="nav-item"><button class="nav-link" data-bs-toggle="pill" data-bs-target="#ice-exp">⛽ ICE</button></li>
@@ -40,19 +56,19 @@
   </ul>
 
   <main class="tab-content">
+
     <!-- Charging -->
     <div class="tab-pane fade show active" id="charge">
       <div id="savingsSummary" class="summary-box">Loading savings...</div>
-
       <div id="chargeBanner" class="toast-banner d-none"></div>
       <div id="acBanner" class="toast-banner d-none"></div>
 
-      <div class="card card-body">
+      <div class="section-box">
         <div class="row g-2">
           <div class="col-6">
             <label class="form-label small">Current SoC %</label>
             <input type="number" id="soc" class="form-control">
-            <input type="number" id="sochidden" class="form-control" style="display:none;">
+            <input type="number" id="sochidden" class="form-control d-none">
           </div>
           <div class="col-6">
             <label class="form-label small">Odometer</label>
@@ -61,16 +77,16 @@
         </div>
         <div class="form-check mt-2">
           <input class="form-check-input" type="checkbox" id="chargedChk">
-          <label class="form-check-label" for="chargedChk">Charged?</label>
+          <label class="form-check-label small" for="chargedChk">Charged?</label>
         </div>
         <div id="chargeTypeWrap" class="mt-1" style="display:none;">
           <div class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="chargeType" id="acRadio" value="AC">
-            <label class="form-check-label" for="acRadio">AC</label>
+            <label class="form-check-label small" for="acRadio">AC</label>
           </div>
           <div class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="chargeType" id="dcRadio" value="DC">
-            <label class="form-check-label" for="dcRadio">DC</label>
+            <label class="form-check-label small" for="dcRadio">DC</label>
           </div>
         </div>
         <button class="btn btn-dark w-100 mt-2" id="saveInputsBtn">Save</button>
@@ -80,17 +96,17 @@
         <button class="btn btn-primary w-100 mt-2" id="suggestBtn">Get Suggestion</button>
       </div>
 
-      <div class="card card-body">
-        <h6>📜 History</h6>
+      <div class="section-box">
+        <h6 class="mb-2">📜 History</h6>
         <div id="history"></div>
       </div>
     </div>
 
     <!-- EV Expenses -->
     <div class="tab-pane fade" id="ev-exp">
-      <div class="card card-body">
+      <div class="section-box">
         <h6>EV Expenses</h6>
-        <div id="evTotal" class="mb-2 fw-bold">Total: ₹0</div>
+        <div id="evTotal" class="fw-bold small mb-2">Total: ₹0</div>
         <div class="row g-2">
           <div class="col-6">
             <select id="evCategory" class="form-select">
@@ -103,22 +119,19 @@
         </div>
         <button class="btn btn-dark w-100 mt-2" id="addEvExpenseBtn">Add</button>
       </div>
-      <div class="card card-body"><div id="evHistory"></div></div>
+      <div class="section-box"><div id="evHistory"></div></div>
     </div>
 
     <!-- ICE Expenses -->
     <div class="tab-pane fade" id="ice-exp">
-      <div class="card card-body">
-        <div class="row">
-        <div class="col-6">
-        <h6>ICE Expenses</h6>
-        <div id="iceTotal" class="mb-2 fw-bold">Total: ₹0</div>
+      <div class="section-box">
+        <div class="d-flex justify-content-between">
+          <h6 class="m-0">ICE Expenses</h6>
+          <div id="iceTotal" class="fw-bold small">Total: ₹0</div>
         </div>
-        <div class="col-6" id="iceFuelExpenses">
-        </div>
+        <div id="iceFuelExpenses" class="small text-muted mt-1"></div>
 
-          </div>
-        <div class="row g-2">
+        <div class="row g-2 mt-2">
           <div class="col-6">
             <select id="iceCategory" class="form-select">
               <option>Initial</option><option>Service</option>
@@ -131,12 +144,12 @@
         </div>
         <button class="btn btn-dark w-100 mt-2" id="addIceExpenseBtn">Add</button>
       </div>
-      <div class="card card-body"><div id="iceHistory"></div></div>
+      <div class="section-box"><div id="iceHistory"></div></div>
     </div>
 
     <!-- Master Data -->
     <div class="tab-pane fade" id="master">
-      <div class="card card-body">
+      <div class="section-box">
         <h6>Fuel Price / Mileage</h6>
         <div class="row g-2">
           <div class="col-3"><input id="fuelType" class="form-control" placeholder="Diesel"></div>
@@ -146,7 +159,7 @@
         </div>
         <button class="btn btn-dark w-100 mt-2" id="saveMasterBtn">Save</button>
       </div>
-      <div class="card card-body"><div id="masterHistory"></div></div>
+      <div class="section-box"><div id="masterHistory"></div></div>
     </div>
   </main>
 
